# csvparser-polysemy

./: CHANGELOG.md  LICENSE  README.md  csvparser.cabal  default.nix  release.nix  shell.nix
app/: Main.hs
nix/lib/: polysemy-plugin.nix  polysemy.nix
src/: Csvparser.hs
