name:                csvparser
version:             0.0.0
description:         fdsa
synopsis:            fdsa
homepage:            https://github.com/trcm/csvparser
bug-reports:         https://github.com/trcm/csvparser/issues
license:             MIT
license-file:        LICENSE
author:              Tom
maintainer:          Tom
copyright:           2019 fdsa
category:            Application
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
cabal-version:       1.24
tested-with:         GHC == 8.4.3

library
  hs-source-dirs:      src
  exposed-modules:     Csvparser
                       
  build-depends:      aeson >= 1.4.2.0
                    , base >=4.9
                    , bytestring >= 0.10.8.2
                    , containers >= 0.6.0.1
                    , polysemy
                    , polysemy-plugin
                    , text >= 1.2.3.1
  ghc-options: -O2 -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin
  default-extensions:
    BlockArguments
    DataKinds
    DeriveFunctor
    FlexibleContexts
    GADTs
    LambdaCase
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators
    TypeFamilies
  default-language:    Haskell2010
  

executable csvparser
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , csvparser
                    , base >=4.9
                    , bytestring >= 0.10.8.2
                    , containers >= 0.6.0.1
                    , polysemy
                    , polysemy-plugin
                    , text >= 1.2.3.1
                     
  default-language:    Haskell2010
  

test-suite csvparser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , csvparser
                     
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  

